Added: Ability to add/remove tags to documents Fixed: Configuration issue where updates tried adding duplicate records Deleted: Configuration classes for both models - useless due to frameworks capabilities Consolidated some common code, tidied some stuff up

--- a/EngineerNotebook.BlazorAdmin/Pages/Login.razor
+++ b/EngineerNotebook.BlazorAdmin/Pages/Login.razor
@@ -1,5 +1,5 @@
 @page "/Login"
-@using EngineerNotebook.Shared.Models.Requests
+@using EngineerNotebook.Shared.Endpoints.Auth
 @inject IAuthService _authService
 @inject NavigationManager _navigationManager
 <h2>Engineers Notebook</h2>
