--- a/EngineerNotebook.BlazorAdmin/_Imports.razor
+++ b/EngineerNotebook.BlazorAdmin/_Imports.razor
@@ -15,5 +15,9 @@
 @using BlazorInputFile
 @using EngineerNotebook.Shared.Models
 @using EngineerNotebook.BlazorAdmin.JavaScript
+@using EngineerNotebook.Shared.Endpoints
+@using EngineerNotebook.Shared.Endpoints.Auth
+@using EngineerNotebook.Shared.Endpoints.Doc
+@using EngineerNotebook.Shared.Endpoints.Tag
 @using Blazored.TextEditor
 @using MudBlazor
