--- a/EngineerNotebook.PublicApi/Views/Shared/Doc.cshtml
+++ b/EngineerNotebook.PublicApi/Views/Shared/Doc.cshtml
@@ -1,5 +1,5 @@
 @using EngineerNotebook.Shared.Extensions
-@model EngineerNotebook.Shared.Models.Documentation
+@model DocumentationViewModel
 
 @{
     Layout = "_Standalone";
@@ -12,19 +12,19 @@
 }
 
 <div class="jumbotron">
-    <h2>@Model.Title</h2>
+    <h2>@Model.Doc.Title</h2>
 
-    <p>@Model.Description</p>
-    <small>@Model.CreatedByUserId</small>
+    <p>@Model.Doc.Description</p>
+    <small>@Model.Doc.CreatedByUserId</small>
 
     <div class="row mb-0 pb-0">
         @for(int i = 0; i < Model.Tags.Count; i++)
         {
             var tag = Model.Tags[i];
             string css = classes[i % classes.Length];
-            <span class="badge @css ml-2 mt-3">@tag</span>
+            <span class="badge @css ml-2 mt-3">@tag.Name</span>
         }
     </div>
 </div>
 
-@Html.Raw(Model.Contents?.FromBase64())
+@Html.Raw(Model.Doc.Contents?.FromBase64())
