--- a/EngineerNotebook.Editor/Shared/NavMenu.razor
+++ b/EngineerNotebook.Editor/Shared/NavMenu.razor
@@ -1,3 +1,3 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="/dashboard">Dashboard</MudNavLink>
+    <MudNavLink Href="" Match="NavLinkMatch.All">Dashboard</MudNavLink>
 </MudNavMenu>
