--- a/EngineerNotebook.Editor/wwwroot/css/app.css
+++ b/EngineerNotebook.Editor/wwwroot/css/app.css
@@ -1,5 +1,18 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+p img,
+h1 img,
+h2 img,
+h3 img,
+h4 img,
+h5 img,
+h6 img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
