--- a/EngineerNotebook.PublicApi/Views/Shared/_Standalone.cshtml
+++ b/EngineerNotebook.PublicApi/Views/Shared/_Standalone.cshtml
@@ -3,6 +3,13 @@
 <head>
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <style>
+        img {
+            width:  100%;
+            height:  100%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
 
