--- a/EngineerNotebook.Editor/Shared/NavMenu.razor
+++ b/EngineerNotebook.Editor/Shared/NavMenu.razor
@@ -1,3 +1,4 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All">Dashboard</MudNavLink>
+    <MudNavLink Href="tags" Match="NavLinkMatch.All">Tags</MudNavLink>
 </MudNavMenu>
